* index.html: Add some new news. Move some old news to... 	* old-news.html: ...here.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,6 +66,22 @@ GDB and related tools are
 
 <table>
 <tr><td valign="top">
+<b>March 25, 2001</b>
+</td><td>
+It is now possible to call methods on Java interface references from C++ code
+via <A HREF="papers/cni/t1.html">CNI</A>, thanks to Bryce McKinlay's compiler
+work. <A HREF=http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html>Details.</A>
+</td></tr>
+
+<tr><td valign="top">
+<b>March 25, 2001</b>
+</td><td>
+Kevin B. Hendricks implemented the neccessary FFI support to get the 
+libgcj interpreter running on PowerPC. This is now one of our fully supported 
+targets!
+</td></tr>
+
+<tr><td valign="top">
 <b>March 7, 2001</b>
 </td><td>
 The first snapshot from the code branch that will become GCC 3.0 is 
@@ -76,33 +92,6 @@ more stable than the main development tree -- so try them out and help us
 find bugs!
 </td></tr>
 
-<tr><td valign="top">
-<b>February 8, 2001</b>
-</td><td>
-Made use of Warren Levy's change to the Mauve testsuite to handle regressions.
-Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
-<tt>xfails</tt> file of known library failures from the source tree
-to the directory where the libjava <tt>'make check'</tt> is being run.  
-This allows the testsuite to ignore <tt>XFAIL</tt>s and thus highlight
-true regressions in the library.
-</td></tr>
-
-<tr><td valign="top">
-<b>January 28, 2001</b>
-</td><td>
-The various gcj mailing lists have moved to gcc.gnu.org.
-Unused lists have been removed, and java-discuss was renamed
-to java.  See <a href="/ml/java/2001-01/msg00539.html">the announcement</a>
-for all the gory details.  With this change, the gcj project
-is now fully merged into GCC.
-</td></tr>
-
-<tr><td valign="top">
-<b>January 17, 2001</b>
-</td><td>
-GCJ is now compatible with the V3 C++ ABI, thanks to the efforts of 
-Alexandre Petit-Bianco.
-</td></tr>
 
 <tr><td valign="top">
 </td><td>
