--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -10,6 +10,34 @@
 
 <table>
 <tr><td valign="top">
+<b>February 8, 2001</b>
+</td><td>
+Made use of Warren Levy's change to the Mauve testsuite to handle regressions.
+Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
+<tt>xfails</tt> file of known library failures from the source tree
+to the directory where the libjava <tt>'make check'</tt> is being run.  
+This allows the testsuite to ignore <tt>XFAIL</tt>s and thus highlight
+true regressions in the library.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 28, 2001</b>
+</td><td>
+The various gcj mailing lists have moved to gcc.gnu.org.
+Unused lists have been removed, and java-discuss was renamed
+to java.  See <a href="/ml/java/2001-01/msg00539.html">the announcement</a>
+for all the gory details.  With this change, the gcj project
+is now fully merged into GCC.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 17, 2001</b>
+</td><td>
+GCJ is now compatible with the V3 C++ ABI, thanks to the efforts of 
+Alexandre Petit-Bianco.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 20, 2000</b>
 </td><td>
 The Java Gnats database has been merged into the gcc Gnats database.
