Add an entry for h8300-hms.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -14,6 +14,7 @@ GNU Compiler Collection on your machine.</p>
   <li><a href="#alpha*-dec-osf*">alpha*-dec-osf*</a></li>
   <li><a href="#avr">avr</a></li>
   <li><a href="#dos">DOS</a></li>
+  <li><a href="#h8300-hms">h8300-hms</a></li>
   <li><a href="#hppa*-hp-hpux*">hppa*-hp-hpux*</a></li>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
   <li><a href="#hppa*-hp-hpux10">hppa*-hp-hpux10</a></li>
@@ -134,6 +135,10 @@ the binutils.</p>
 
 <p>Please have a look at our <a href="binaries.html">binaries page</a>.</p>
 
+<hr>
+<h3><a name="h8300-hms">h8300-hms</a></h3>
+
+<p>Please have a look at our <a href="binaries.html">binaries page</a>.</p>
 
 <hr>
 <h3><a name="hppa*-hp-hpux*">hppa*-hp-hpux*</a></h3>
