--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -41,7 +41,8 @@ This is preferable to creating one written in java because it doesn't
 require java running on the host development system when building a
 cross compiler.  Once it has been imported, the following tasks remain:
 <ul>
-<li>modify gcj to obey the contraints layed out by the jar file manifest file.
+<li>modify gcj to obey the constraints layed out by the jar file
+manifest file.</li>
 </ul>
 <p>
 
