--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -63,7 +63,7 @@ designed for standards compliance, performance and portability.  The
 to allow Java virtual machines to be plugged into Mozilla.  A gij
 based plugin would be very nice indeed (gijzilla?).
 <p>
-This project will eventually need a bytecode verifier
+This project will eventually need a bytecode verifier.
 <p>
 
 <br>
