More new features (from Gerald).

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -8,9 +8,18 @@
 <h1 align="center">GCC 3.0 New Features</h1>
 
 <ul>
-  <li>To be filled in...</li>
+  <li>Java support.</li>
+  <li>New C++ ABI, capable of inter-operating with other IA-64 compilers.</li>
+  <li>The new ABI also significantly reduces the size of symbol and debug
+      information.</li>
+  <li>New C++ support library and many C++ bug fixes, vastly improving our
+      conformance to the ISO C++ standard.</li>
   <li>New Targets and Target Specific Improvements:
   <ul>
+    <li>New x86 back-end, generating much improved code.</li>
+    <li>Improved PowerPC code generation, including scheduled
+        prologue and epilogue.</li>
+    <li>Port of IA-64 contributed.</li>
     <li>Port of gcc to Motorola's MCore 210 and 340 contributed.</li>
     <li>Port of gcc to Intel's XScale processor contributed.</li>
     <li>Port of gcc to Atmel's AVR microcontrollers contributed.</li>
