Give more details about the Sun 4.x assembler bug with long symbols.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -542,8 +542,10 @@ A typical error message might look similar to the following:
 /usr/ccs/bin/as: "/var/tmp/ccMsw135.s", line 11041: error: can't compute      
 value of an expression involving an external symbol.
 </CODE></BLOCKQUOTE>
-<p>See the <a href="../faq.html#squangle">How to work around too long C++
-symbol names?</a> FAQ entry for further information.</p>
+<p>This is Sun bug 4237974.  See the <a href="../faq.html#squangle">How
+to work around too long C++ symbol names?</a> FAQ entry for further
+information and a workaround.  This is fixed with patch 108908-02 and
+has been fixed in later (5.x) versions of the assembler.</p>
 
 <p>Sun make in all known Solaris 1 (SunOS 4) and Solaris 2 releases has a
 broken <i>VPATH</i> mechanism, which means you must either:
