--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -41,8 +41,8 @@ Written Word</a> offers binaries for Solaris 2.5.1, 2.6, 2.7/SPARC, 2.7/Intel,
 IRIX 6.2, 6.5, Digital UNIX 4.0D, HP-UX 10.20, and HP-UX 11.00.</li>
 
 <li>Hitachi H8/300[HS]: <a
-href="http://www.hdl.co.jp/~kban/h8300-hms/">GNU Development Tools for
-the Hitachi H8/300[HS] Series</a></li>
+href="http://h8300-hms.sourceforge.net/">GNU Development Tools for the
+Hitachi H8/300[HS] Series</a></li>
 
 </ul>
 
