Update URL and explanation for Compaq Tru64 UNIX Object File and Symbol Table Format Specification. By Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -401,8 +401,8 @@ tahoe. These are listed here just for completeness.
   <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
   Scalar Compiler Project</a>
 
-  <li><a href="http://www.partner.europe.digital.com/www-swdev/pages/Home/TECH/dunix/ofst/build/src/index.html">
-  Information on the Digital UNIX V5.0 object file format</a>
+  <li><a href="http://tru64unix.compaq.com/faqs/publications/base_doc/DOCUMENTATION/V51_HTML/SUPPDOCS/OBJSPEC/TITLE.HTM">
+  Information on the Digital UNIX/Compaq Tru64 UNIX object file format</a>
 
 <p>
 
