--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -45,6 +45,8 @@
   <ul>
     <li>New x86 back-end, generating much improved code.</li>
     <li>Support for a generic i386-elf target contributed.</li>
+    <li>New option to emit x86 assembly code using Intel style syntax
+        (<code>-mintel-syntax</code>).</li>
     <li>HPUX 11 support contributed.</li>
     <li>Improved PowerPC code generation, including scheduled
         prologue and epilogue.</li>
