Mention builtins and optimizations for stdio.h, string.h etc. and __builtin_expect. By Dan Nicolaescu <dann@godzilla.ics.uci.edu>.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -21,6 +21,10 @@
         elimination</a>.</li>
     <li><a href="../news/unify.html">Global code
         hoisting/unification</a>.</li>
+    <li>More builtins and optimizations for stdio.h, string.h and old
+        BSD functions, as well as for ISO C99 functions.</li> 
+    <li>New builtin __builtin_expect for giving hints to the branch
+        predictor.</li> 
   </ul></li>
   <li>New Languages and Language specific improvements:
   <ul>
