2001-04-06  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Mention new snapshot.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.8 2000/12/03 23:35:09 jsm28 Exp $ -->
+<!-- $Id: index.html,v 1.9 2001/02/05 14:25:00 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -36,8 +36,10 @@
 <H3>News</H3>
 
 <DL>
+ <DT>2001-04-0
+ <DD> Eleventh snapshot release, <A HREF="download.html">libstdc++-2.92.tar.gz</A>.
  <DT>2000-11-17
- <DD> Tenth snapshot release, <A HREF="download.html">libstdc++-2.91.tar.gz</A>.
+ <DD> Tenth snapshot release, libstdc++-2.91.tar.gz.
  <DT>2000-11-12
  <DD> Officially
    <A HREF="http://gcc.gnu.org/ml/gcc/2000-11/msg00522.html">made 
