"Writing a Compiler Front End to GCC" became "Using, Maintaining and Enhancing COBOL for the GNU Compiler Collection (GCC)" and moved.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -21,8 +21,9 @@
   Closures for C++</a> by Thomas M. Breuel, on the design and
   implementation of nested functions in GCC.
 
-  <li><a href="http://www.geocities.com/timjosling/gcc_toc.html">Writing a
-  Compiler Front End to GCC</a> by Joachim Nadler and Tim Josling
+  <li><a href="http://cobolforgcc.sourceforge.net/cobol_toc.html">Using,
+  Maintaining and Enhancing COBOL for the GNU Compiler Collection (GCC)</a>
+  by Joachim Nadler and Tim Josling
   &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
 
   <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy
