--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -50,6 +50,7 @@ if you are mirroring the GCC pages so we can note it here!</p>
 <LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
+<LI>Poland (Lodz): <A HREF="ftp://ftp.fic.uni.lodz.pl/pub/sources.redhat.com/pub/gcc/">ftp.fic.uni.lodz.pl</a>
 <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs/">ftp.lca.uevora.pt</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a>
