--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -120,6 +120,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2001-04">Apr 2001
 <option value="gcc/2001-03">Mar 2001
 <option value="gcc/2001-02">Feb 2001
 <option value="gcc/2001-01">Jan 2001
@@ -165,6 +166,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2001-04">Apr 2001
 <option value="gcc-bugs/2001-03">Mar 2001
 <option value="gcc-bugs/2001-02">Feb 2001
 <option value="gcc-bugs/2001-01">Jan 2001
@@ -210,6 +212,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2001-04">Apr 2001
 <option value="gcc-patches/2001-03">Mar 2001
 <option value="gcc-patches/2001-02">Feb 2001
 <option value="gcc-patches/2001-01">Jan 2001
@@ -247,6 +250,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2001-04">Apr 2001
 <option value="gcc-help/2001-03">Mar 2001
 <option value="gcc-help/2001-02">Feb 2001
 <option value="gcc-help/2001-01">Jan 2001
@@ -269,6 +273,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2001-04">Apr 2001
 <option value="gcc-cvs/2001-03">Mar 2001
 <option value="gcc-cvs/2001-02">Feb 2001
 <option value="gcc-cvs/2001-01">Jan 2001
@@ -306,6 +311,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2001-04">Apr 2001
 <option value="gcc-testresults/2001-03">Mar 2001
 <option value="gcc-testresults/2001-02">Feb 2001
 <option value="gcc-testresults/2001-01">Jan 2001
@@ -356,6 +362,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="gcc-regression/2001-04">Apr 2001
 <option value="gcc-regression/2001-03">Mar 2001
 <option value="gcc-regression/2001-02">Feb 2001
 <option value="gcc-regression/2001-01">Jan 2001
@@ -369,6 +376,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-regression/2000-05">May 2000
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-prs/2001-q2">Apr-Jun 2001
 <option value="gcc-prs/2001-q1">Jan-Mar 2001
 <option value="gcc-prs/2000-q4">Oct-Dec 2000
 <option value="gcc-prs/2000-q3">Jul-Sep 2000
@@ -408,6 +416,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++/2001-04">Apr 2001
 <option value="libstdc++/2001-03">Mar 2001
 <option value="libstdc++/2001-02">Feb 2001
 <option value="libstdc++/2001-01">Jan 2001
@@ -425,6 +434,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++/1999-q1">Jan-Mar 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++-cvs/2001-q2">Apr-Jun 2001
 <option value="libstdc++-cvs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-cvs/2000-q4">Oct-Dec 2000
 <option value="libstdc++-cvs/2000-q3">Jul-Sep 2000
@@ -434,6 +444,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="libstdc++-cvs/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++-prs/2001-q2">Apr-Jun 2001
 <option value="libstdc++-prs/2001-q1">Jan-Mar 2001
 <option value="libstdc++-prs/2000-q4">Oct-Dec 2000
 <option value="libstdc++-prs/2000-q3">Jul-Sep 2000
@@ -464,6 +475,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="java/2001-04">Apr 2001
 <option value="java/2001-03">Mar 2001
 <option value="java/2001-02">Feb 2001
 <option value="java/2001-01">Jan 2001
@@ -487,6 +499,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java/1998-09">Sep 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="java-patches/2001-q2">Apr-Jun 2001
 <option value="java-patches/2001-q1">Jan-Mar 2001
 <option value="java-patches/2000-q4">Oct-Dec 2000
 <option value="java-patches/2000-q3">Jul-Sep 2000
@@ -497,6 +510,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="java-patches/1999-q2">Apr-Jun 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="java-prs/2001-q2">Apr-Jun 2001
 <option value="java-prs/2001-q1">Jan-Mar 2001
 <option value="java-prs/2000-q4">Oct-Dec 2000
 <option value="java-prs/2000-q3">Jul-Sep 2000
