--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -37,13 +37,28 @@
     <li>New C++ support library and many C++ bug fixes, vastly improving our
         conformance to the ISO C++ standard.</li>
     <li>New <a href="../news/inlining.html">inliner for C++</a>.</li>
-    <!-- Fortran news (if any) in main g77 manual -->
     <li>Rewritten C preprocessor, integrated into the C, C++ and
         Objective C compilers, with very many improvements including
         ISO C99 support and <a
         href="../news/dependencies.html">improvements to dependency
         generation</a>.</li>
     <li>Support for more <a href="c99status.html">ISO C99 features</a>.</li>
+    <li>Fortran improvements:
+    <ul>
+      <li>The compiler now emits debug information for individual COMMON
+          and EQUIVALENCE items, when requested.</li>
+      <li>It indicates to the middle-end that the common math intrinsics (like
+          sin, cos, exp, log, etc.) are functions whose result only depends
+          on their argument(s).  This improves instruction scheduling around
+          those intrinsics.</li>
+      <li>It is not necessary anymore to specify the <code>-femulate-complex
+          </code>flag when compiling code with complex arithmetic,
+          even on 64-bit targets.
+          This improves the resulting code in both number of instructions
+          and speed.</li>
+      <li>REWIND-after-WRITE will now truncate the file written to without
+          making a copy.</li>
+     </ul></li>
   </ul></li>
   <li>New Targets and Target Specific Improvements:
   <ul>
