* index.html: Mention java.security merge.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,6 +66,13 @@ GDB and related tools are
 
 <table>
 <tr><td valign="top">
+<b>April 25, 2001</b>
+</td><td>
+Bryce McKinlay merged <tt>java.security</tt> with Classpath.
+The new package is now JDK 1.2 compliant, and much more complete.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 25, 2001</b>
 </td><td>
 It is now possible to call methods on Java interface references from C++ code
