--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -189,6 +189,19 @@ GCC.  A partial list of supported <tt>options</tt>:
   <b>*does not*</b> work anymore, as those language sub-directories might not have been
   configured!</li>
 
+  <li>
+  <code>--disable-libgcj</code> -- Specify that the run-time libraries
+  used by GCJ should not be built.  This is useful in case you intend
+  to use GCJ with some other run-time, or you're going to install it
+  separately, or it just happens not to build on your particular
+  machine.  In general, if the Java front-end is enabled, the GCJ
+  libraries will be enabled too, unless they're known to not work on
+  the target platform.  If GCJ is enabled but libgcj isn't built, you
+  may need to port it; in this case, before modifying the top-level
+  configure.in so that libgcj is enabled by default on this platform,
+  you may use <code>--enable-libgcj</code> to override the default.
+  </li>
+
   <li> <code>--with-dwarf2</code> -- Specify that the compiler should use DWARF2
   debugging information as the default.</li>
 </ul>
