Add entries for more features.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -43,6 +43,17 @@
         href="../news/dependencies.html">improvements to dependency
         generation</a>.</li>
     <li>Support for more <a href="c99status.html">ISO C99 features</a>.</li>
+    <li>Many improvements to support for checking calls to format
+        functions such as <code>printf</code> and <code>scanf</code>,
+        including support for ISO C99 format features, extensions from
+        the Single Unix Specification and GNU libc 2.2, checking of
+        <code>strfmon</code> formats and features to assist in
+        auditing for format string security bugs.</li>
+    <li>New warnings for C code that may have undefined semantics
+        because of violations of sequence point rules in the C
+        standard (such as <code>a = a++;</code>, <code>a[n] =
+        b[n++];</code> and <code>a[i++] = i;</code>), included in
+        <code>-Wall</code>.</li>
     <li>Fortran improvements are listed in
         <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
         documentation</a>.</li>
@@ -69,6 +80,24 @@
         contributed.</li>
     <li>Port of gcc to Sun's picoJava processor core contributed.</li>
   </ul></li>
+  <li>Documentation improvements:
+  <ul>
+    <li>Substantially rewritten and improved C preprocessor
+        manual.</li>
+    <li>Many improvements to other documentation.</li>
+    <li>Manpages for <code>gcc</code>, <code>cpp</code> and
+        <code>gcov</code> are now generated automatically from the
+        master Texinfo manual, eliminating the problem of manpages
+        being out of date.  (The generated manpages are only extracts
+        from the full manual, which is provided in Texinfo form, from
+        which info, HTML, other formats and a printed manual can be
+        generated.)</li>
+    <!-- This needs to be implemented in the release script.  -->
+    <li>Generated info files are included in the release tarballs
+        alongside their Texinfo sources, avoiding problems on some
+        platforms with building <code>makeinfo</code> as part of the
+        GCC distribution.</li>
+  </ul></li>
   <li>Other significant improvements:
   <ul>
     <li>Garbage collection used internally by the compiler for most memory
@@ -76,6 +105,13 @@
     <li>Lengauer and Tarjan algorithm used for computing dominators in
         the CFG.  This algorithm can be significantly faster and more
         space efficient than our older algorithm.</li>
+    <li><code>gccbug</code> script provided to assist in submitting
+        bug reports to the GCC GNATS bug tracking database.  (Bug
+        reports previously submitted directly to the GCC mailing
+        lists, for which no GNATS bug tracking number has been
+        received, should be submitted again to the bug tracking
+        database using <code>gccbug</code> if you can reproduce the
+        problem with GCC 3.0.)</li>
   </ul></li>
   <li>Plus a great many bugfixes and almost all the <a
   href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</li>
