--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -112,6 +112,10 @@
         received, should be submitted again to the bug tracking
         database using <code>gccbug</code> if you can reproduce the
         problem with GCC 3.0.)</li>
+    <li>Extensive testsuite again included with GCC, with many new
+        tests.  In addition to tests for GCC bugs that have been
+        fixed, many tests have been added for language features,
+        compiler warnings and builtin functions.</li>
   </ul></li>
   <li>Plus a great many bugfixes and almost all the <a
   href="../gcc-2.95/features.html">features found in GCC 2.95</a>.</li>
