Add more caveats.

--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -12,6 +12,24 @@
   function parameters and function returns.  Normally this change is
   not visible, but when using <code>-fshort-enums</code> this is an
   ABI change.</li>
+
+  <li>The undocumented extension that allowed C programs to have a
+  label at the end of a compound statement has been deprecated and may
+  be removed in a future version.  Programs that now generate a
+  warning about this may be fixed by adding a null statement (a single
+  semicolon) after the label.</li>
+
+  <li>The poorly documented extension that allowed string constants in
+  C, C++ and Objective C to contain unescaped newlines has been
+  deprecated and may be removed in a future version.  Programs using
+  this extension may be fixed in several ways: the bare newline may be
+  replaced by <code>\n</code>, or preceded by <code>\n\</code>, or
+  string concatenation may be used with the bare newline preceded by
+  <code>\n"</code> and <code>"</code> placed at the start of the next
+  line.</li>
+
+  <li>The Chill compiler is not included in GCC 3.0, because of the
+  lack of a volunteer to convert it to use garbage collection.</li>
 </ul>
 
 </body>
