Add more details on Java support. By Per Bothner <per@bothner.com>.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -28,7 +28,14 @@
   </ul></li>
   <li>New Languages and Language specific improvements:
   <ul>
-    <li>Java support.</li>
+    <li>The GNU Compiler for the Java(TM) language (GCJ)
+        is now integrated and supported, including the run-time library
+        containing most common non-GUI Java classes, a bytecode interpreter,
+        and the Boehm conservative garbage collector.
+        Many bugs have been fixed.
+        GCJ can compile Java source or Java bytecodes to either native code
+        or Java class files, and supports native methods written in either
+        the standard JNI or the more efficient and convenient CNI.</li>
     <!-- See also gcc/cp/NEWS; include a copy of the relevant parts as
          c++features.html.  -->
     <li>New C++ ABI, capable of inter-operating with other IA-64 compilers.</li>
