The testsuite is a new feature for FSF releases.

--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -119,7 +119,7 @@
         received, should be submitted again to the bug tracking
         database using <code>gccbug</code> if you can reproduce the
         problem with GCC 3.0.)</li>
-    <li>Extensive testsuite again included with GCC, with many new
+    <li>Extensive testsuite included with GCC, with many new
         tests.  In addition to tests for GCC bugs that have been
         fixed, many tests have been added for language features,
         compiler warnings and builtin functions.</li>
