--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -219,8 +219,8 @@ different programming languages.</p>
 <tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
     <td>C++
     <td>2.2.0
-    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.2.0.tgz">
-        pooma-2.2.0.tgz</a>
+    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
+        pooma-2.3.0.tgz</a>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a>
     <td>Fortran
     <td>3.0
@@ -249,7 +249,10 @@ ability of G++ to deal with templates, an area that has historically
 been buggy.  In addition, templates have historically taken
 inordinately much time and memory at compile-time.  With the
 widespread prevalence of templates in C++ programs, including the
-standard library, testing this area heavily is vitally important.</p>
+standard library, testing this area heavily is vitally important.  For
+instructions on how to set up and build POOMA and check the outcome
+of its testing programs see <a href="pooma-guide.html"> this
+guide</a>.</p>
 
 <p>LAPACK is a well known linear algebra package that contains
 code typical for large scale Fortran programs.
