* cpplib.html: Update bug reporting instructions.

--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -15,13 +15,14 @@ too.</p>
 
 <h2>Reporting Bugs</h2>
 
-<p>As usual, report bugs to <a
-href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>.  A bug
-report saying 'package FOO won't compile on system BAR' is useless.
-We need short testcases with no system dependencies.  Aim for less
-than fifty lines and no #includes at all; we recognize this won't
-always be possible.  Please read the rest of this document
-first!</p>
+<p>As usual, report bugs with our bug tracking system, GNATS.  Bugs
+can be submitted using gccbug (found in the contrib directory) or via
+the web interface.  See <a href="../../bugs.html">bugs.html</a> for
+more details.  A bug report saying 'package FOO won't compile on
+system BAR' is useless.  We need short testcases with no system
+dependencies.  Aim for less than fifty lines and no #includes at all;
+we recognize this won't always be possible.  Please read the rest of
+this document first!</p>
 
 <p>Also, please file off everything that would cause us legal trouble
 if we were to roll your test case into the distributed test suite.
@@ -101,7 +102,7 @@ after thought, which is not entirely coincidental.
   <li>The identifier hash tables used by cpplib and the front end
       might benefit from unification.  This is tricky, since there are
       frontends that don't use CPP, and we don't want any undue
-      depenendency.
+      dependency.
 
   <li>If YACC did not insist on assigning its own values for token
       codes, there would be no need for a translation layer between
