* cpplib.html: Add category.

--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -17,12 +17,12 @@ too.</p>
 
 <p>As usual, report bugs with our bug tracking system, GNATS.  Bugs
 can be submitted using gccbug (found in the contrib directory) or via
-the web interface.  See <a href="../../bugs.html">bugs.html</a> for
-more details.  A bug report saying 'package FOO won't compile on
-system BAR' is useless.  We need short testcases with no system
-dependencies.  Aim for less than fifty lines and no #includes at all;
-we recognize this won't always be possible.  Please read the rest of
-this document first!</p>
+the web interface, and should be put in the "preprocessor" category.
+See <a href="../../bugs.html">bugs.html</a> for more details.  A bug
+report saying 'package FOO won't compile on system BAR' is useless.
+We need short testcases with no system dependencies.  Aim for less
+than fifty lines and no #includes at all; we recognize this won't
+always be possible.  Please read the rest of this document first!</p>
 
 <p>Also, please file off everything that would cause us legal trouble
 if we were to roll your test case into the distributed test suite.
